--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "contact",
   "version": "1.0.0",
+  "proxy": "http://127.0.0.1:5000/",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,11 +11,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
     "expo-status-bar": "~1.3.0",
+    "moment": "^2.29.4",
+    "native-base": "^3.4.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-axios": "^0.17.1",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-select-dropdown": "^2.0.4",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
